--- a/CsharpSamples/CsharpSamples.csproj
+++ b/CsharpSamples/CsharpSamples.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CsharpSamples.Logger\CsharpSamples.Logger.csproj" />
+    <ProjectReference Include="..\TestManager\TestManager.csproj" />
+  </ItemGroup>
+
 </Project>
